# ai-workspace

./: .gitignore  .mise.toml
_bmad/: .prompt-itmp.md  .sm_next_result  orchestrator-master.md  progress.txt
_bmad-output/planning-artifacts/: epics.md  implementation_plan.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/baut/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: architecture.md  gap-analysis-cowork.md  gap-analysis-openwork.md  plan-cowork-parity.md  prd.md
docs/backlog/stories/: story-0001-tauri-app-scaffold.md  story-0002-settings-and-config.md  story-0003-gateway-lifecycle-and-status-bar.md  story-0004-session-switcher.md  (+7 more)
docs/standards/: po-alignment-checklist.md  qa-standards.md  scrum-master-guide.md
hermes-desktop/: package-lock.json  package.json  tailwind.config.js
hermes-desktop/hermes-core/: Cargo.toml
hermes-desktop/src/: app.jsx  app.test.jsx  main.jsx
hermes-desktop/src-tauri/: Cargo.toml  tauri.conf.json
ui/claude-design/: .thumbnail  Hermes Desktop.html  app.jsx  data.jsx
workspace-desktop/: Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json  server.js  vitest.config.js
workspace-desktop/src/: app.jsx
workspace-desktop/src-server/: Cargo.toml
workspace-desktop/src-tauri/: Cargo.toml  tauri.conf.json
workspace-desktop/src-tauri/src/: discovery.rs  harness.rs  harness_claude.rs  harness_codex.rs  harness_pi.rs  main.rs  scheduled.rs  sessions.rs  workspace.rs
(+120 files in other folders)
