[package]
name = "workspace-desktop"
version = "0.1.0"
description = "Workspace Desktop"
authors = ["James Pakele"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.3"
hermes-core = { path = "../hermes-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
dirs = "5"
zip = "2"
